# creative_coding_irl

./: .flake8  .gitignore  Block Pixel.ipynb  David Bowie sonny-Copy1.ipynb  David Bowie sonny.ipynb  Dockerfile  Drawings.ipynb  Entropy Triangles Optimized.ipynb  Entropy Triangles.ipynb  Entropy stuff?.ipynb  Line Images.ipynb  Lines.ipynb  Lorenz.ipynb  Maze thing?.ipynb  Mosaic.ipynb  Pixalated-continuous.ipynb  Pixaleted.ipynb  Template.ipynb  Testing stuff.ipynb  Voronoi Optimized.ipynb  Voronoi.ipynb  Wave Signal.ipynb  draw_lines.py  foobar.gcode  pyproject.toml  random.gcode  spiral.gcode  spiral2.gcode  squares.gcode
foobah/: constants.py  gcode.py  methods.py  utils.py
foobah/procedures/: __init__.py  line_threshold.py  square_wave.py  triangularization.py  tsp_scribble.py  wave_signal.py
