[tool.poetry]
name = "potatolangelo"
version = "0.1.0"
description = ""
authors = ["h3nnn4n <uber.renan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter = "^1.0.0"
numpy = "^1.22.2"
pycairo = "^1.20.1"
Pillow = "^9.0.1"
more-itertools = "^8.12.0"
matplotlib = "^3.5.1"
notebook = "^6.4.8"
ipykernel = "^6.9.0"
jupyterlab = "^3.2.9"
scipy = "^1.8.0"
ortools = "^9.3.10497"
tqdm = "^4.63.1"
ipywidgets = "^7.7.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
